# cstm-compiler

./: build.sh  pyproject.toml
src/: emitter.py  input_token.py  lexer.py  main.py  parse.py
