[tool.poetry]
name = "cstm-compiler"
version = "0.1.0"
description = ""
authors = ["Tristan Bester <tristanbester@gmail.com>"]
readme = "README.md"
packages = [{include = "cstm_compiler"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
